# website_summarizer

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.vercel/: project.json
app/: crud.py  main.py  models.py
app/api/: deps.py  main.py
app/api/routes/: brochures.py  items.py  login.py  temp.py  users.py  utils.py  websites.py
app/core/: config.py  db.py  security.py
app/crud/: __init__.py  brochure.py  item.py  user.py  website.py
app/models/: __init__.py  auth.py  base.py  brochure.py  common.py  item.py  user.py  website.py
app/models/auth/: schema.py
app/models/item/: model.py  schema.py
app/models/user/: model.py  schema.py
app/models/website/: model.py  schema.py
app/services/: __init__.py  brochure_service.py  website_service.py
app/tests/api/routes/: test_login.py  test_users.py
app/tests/crud/: test_user.py
app/tests/utils/: item.py  user.py
